--- a/build.gradle
+++ b/build.gradle
@@ -20,19 +20,38 @@ configurations {
 }
 
 repositories {
-    mavenCentral()
+    mavenCentral()  // Maven Central 추가
+    flatDir {
+        dirs 'libs'  // 'libs' 폴더 경로를 지정
+    }
 }
 
+
 dependencies {
+    // OpenCV 의존성
+    implementation name: 'opencv-4100'
+
+    // Spring Boot 관련 의존성
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-    annotationProcessor 'org.projectlombok:lombok'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'commons-io:commons-io:2.11.0'
+
+    // Lombok 의존성
+    compileOnly 'org.projectlombok:lombok:1.18.26'
+    annotationProcessor 'org.projectlombok:lombok:1.18.26'
+
+    // 개발용 및 테스트 의존성
+    // developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // MySQL JDBC 드라이버
+    runtimeOnly 'com.mysql:mysql-connector-j:8.0.33'
 }
+
 
 tasks.named('test') {
     useJUnitPlatform()
