[Feat] FCM을 위한 환경 설정

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ out/
 .vscode/
 
 application.yml
+leejeonmoon-835a7-firebase-adminsdk-eud8s-06fefe76ca.json
+src/main/resources/leejeonmoon-835a7-firebase-adminsdk-eud8s-06fefe76ca.json
