--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.9.1' // 자바 JMT 라이브러리
     implementation 'javax.xml.bind:jaxb-api:2.3.1' // XML 문서와 Java 객체 간 매핑 자동화
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    implementation group: 'com.google.firebase', name: 'firebase-admin', version: '8.1.0'
 }
 
 tasks.named('test') {
