--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ out/
 application.yml
 leejeonmoon-835a7-firebase-adminsdk-eud8s-06fefe76ca.json
 src/main/resources/leejeonmoon-835a7-firebase-adminsdk-eud8s-06fefe76ca.json
+src/main/resources/templates/notification.html
+src/main/resources/public/firebase-messaging-sw.js
