--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ src/main/resources/leejeonmoon-835a7-firebase-adminsdk-eud8s-06fefe76ca.json
 src/main/resources/templates/notification.html
 src/main/resources/public/firebase-messaging-sw.js
 src/main/resources/static/js/firebaseInit.js
+src/main/resources/application-deploy.yml
