[Chore] CI/CD 구축

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ src/main/resources/templates/notification.html
 src/main/resources/public/firebase-messaging-sw.js
 src/main/resources/static/js/firebaseInit.js
 src/main/resources/application-deploy.yml
+src/main/resources/application-local.yml
